# twai-mlops-assignments

./: .gitignore  pyproject.toml  spotify_track_popularity.ipynb
src/: spotify_track_popularity.py
