[project]
name = "spotify-track-popularity-notebook"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mlflow>=2.17.2",
    "kaggle>=1.6.17",
    "notebook>=7.2.2",
    "pandas>=2.2.3",
    "scikit-learn>=1.5.2",
    "imblearn>=0.0",
    "xgboost>=2.1.2",
]
